--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: COWKITE
+title: 소삐용
 email: iscowkite@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  새로 태어난 개발 빠삐용
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://ko.cowkite.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: cowkite
+twitter_username: "@cowkite"
 github_username:  cowkite
 
 # Build settings
