--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   새로 태어난 개발 빠삐용
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://ko.cowkite.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: "@cowkite"
+twitter_username: cowkite
 github_username:  cowkite
 
 # Build settings
