--- a/_config.yml
+++ b/_config.yml
@@ -18,20 +18,23 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 김소연 블로그
+title: 개발요정 김소연 블로그
+author: cowkite
 email: iscowkite@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  우물 안 김소연
+  안녕하세요. 우물 안에서 서식하는 개발요정 김소연입니다.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://ko.cowkite.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: cowkite
-github_username:  cowkite
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
   - jemoji
+
+collections:
+  _posts:
+    output: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
