--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 개발요정 김소연 블로그 &#x1F9DA;
+title: 개발요정 김소연 블로그 🧚‍♀️
 author: cowkite
 email: iscowkite@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
