--- a/_data/project-list.yml
+++ b/_data/project-list.yml
@@ -3,7 +3,7 @@
   description: 딥러닝을 통한 수요/재고예측
   organization: CJ OliveYoung
   period: 2019.10 - Present
-  # thumbnail: img/tbd.jpg
+  thumbnail: img/project_scmdl_thumbnail.png
   language: [
     Python,
     Tensorflow
@@ -20,10 +20,10 @@
 
 - id: 201908oyez
   title: 올영EZ
-  description: 올리브영X세노비스 건강&영양소 정보 안내 서비스
+  description: 상품 큐레이션 및 스마트워크 플랫폼 제공을 위한 매장 내 태블릿 서비스
   organization: CJ OliveYoung
   period: 2019.08 - 2020.02
-  # thumbnail: img/tbd.jpg
+  thumbnail: img/project_oyez_thumbnail.png
   language: [
     Android,
     Kotlin
@@ -41,7 +41,7 @@
   description: 올리브영X세노비스 건강&영양소 정보 안내 서비스
   organization: CJ OliveYoung
   period: 2019.07 - 2019.07
-  # thumbnail: img/tbd.jpg
+  thumbnail: img/project_healtyoy_thumbnail.png
   language: [
     Android,
     Kotlin
