- 경력(홈) 및 프로젝트 이력 업데이트

--- a/_data/home_experience.yml
+++ b/_data/home_experience.yml
@@ -1,6 +1,6 @@
 
 - name: CJ OliveYoung
-  role: Software Engineer for ML/DL and App.
+  role: Software Engineer for App.
   date: 2019.07 - Present
 
 - name: Ubivelox Mobile
