Change project period

--- a/_data/project-list.yml
+++ b/_data/project-list.yml
@@ -50,7 +50,7 @@
   title: 올리브라운지
   description: 올리브영 사내 교육/소통 플랫폼 서비스
   platform: Mobile application
-  period: 2020.05 - Present
+  period: 2020.05 - 2020.12
   thumbnail: img/project_olivelounge_thumbnail.png
   language: [
     iOS,
